--- a/styles/user-ranking.css
+++ b/styles/user-ranking.css
@@ -1,5 +1,5 @@
 .neon-text {
-  text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #00ff00, 0 0 20px #00ff00;
+  text-shadow: 0 0 5px #00ffff, 0 0 10px #00ffff, 0 0 15px #00ffff, 0 0 20px #00ffff;
 }
 
 .glitch-text {
@@ -18,14 +18,14 @@
 
 .glitch-text::before {
   left: 2px;
-  text-shadow: -2px 0 #ff00de;
+  text-shadow: -2px 0 #0ff;
   clip: rect(24px, 550px, 90px, 0);
   animation: glitch-anim-2 3s infinite linear alternate-reverse;
 }
 
 .glitch-text::after {
   left: -2px;
-  text-shadow: -2px 0 #00fff9;
+  text-shadow: -2px 0 #0ff;
   clip: rect(85px, 550px, 140px, 0);
   animation: glitch-anim 2.5s infinite linear alternate-reverse;
 }
@@ -48,7 +48,7 @@
 
 .bg-grid-pattern {
   background-image: 
-    linear-gradient(to right, rgba(0, 255, 0, 0.133) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(0, 255, 0, 0.133) 1px, transparent 1px);
+    linear-gradient(to right, rgba(0, 255, 255, 0.133) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(0, 255, 255, 0.133) 1px, transparent 1px);
   background-size: 20px 20px;
 }
